# Python-for-Data-Science

./: README.md
Python-0-Starting/ex00/: Hello.py
Python-0-Starting/ex01/: format_ft_time.py
Python-0-Starting/ex03/: NULL_not_found.py
Python-0-Starting/ex04/: whatis.py
Python-0-Starting/ex05/: building.py
Python-0-Starting/ex06/: filterstring.py  ft_filter.py
Python-0-Starting/ex07/: sos.py
Python-0-Starting/ex08/: Loading.py
Python-0-Starting/ex09/: LICENSE  README.md  pyproject.toml  setup.py
Python-0-Starting/ex09/ft_package/: __init__.py  functions.py
Python-1-Array/ex00/: give_bmi.py  tester.py
Python-1-Array/ex01/: array2D.py
Python-1-Array/ex02/: load_image.py  tester.py
Python-1-Array/ex03/: load_image.py  zoom.py
Python-1-Array/ex04/: load_image.py  rotate.py
Python-1-Array/ex05/: load_image.py  pimp_image.py  tester.py
