[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
authors = [
    {name = "dkaratae", email = "dkaratae@student.42abudhabi.ae"}
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.6"
classifiers = []

[project.urls]
homepage = "https://github.com/dkaratae/ft_package"
